--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/bingeboy/event-ripping.git"
   },
-  "author": "bingeboy", "kedardes",
+  "author": "bingeboy", 
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bingeboy/event-ripping/issues"
