--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "type": "git",
     "url": "https://github.com/bingeboy/event-ripping.git"
   },
-  "author": "bingeboy", 
+  "contributors" : {
+	"name" : "JP McGarrity",
+	"email" : "design@jpmcgarrity.com",
+    "url" : "http://jpmcgarrity.com"
+  } 
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bingeboy/event-ripping/issues"
