store something in an interval based on server time.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-ripping",
   "version": "0.0.0",
-  "description": "ripping and tearing up events with mapping",
+  "description": "ripping and tearing up events with mapping OMG!",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
